// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Client .addReaction add a reaction to story 1`] = `
Array [
  Object {
    "body": Object {
      "emoji": ":happy",
    },
    "method": "POST",
    "uri": "http://localhost:4001/api/v3/stories/1/comments/5/reactions",
  },
]
`;

exports[`#Client .createEpic creates a new epic 1`] = `
Array [
  Object {
    "body": Object {
      "name": "test",
    },
    "method": "POST",
    "uri": "http://localhost:4001/api/v3/epics",
  },
]
`;

exports[`#Client .createLabel create a label 1`] = `
Array [
  Object {
    "body": Object {
      "color": "fff",
      "name": "sup",
    },
    "method": "POST",
    "uri": "http://localhost:4001/api/v3/labels",
  },
]
`;

exports[`#Client .createProject creates a new project 1`] = `
Array [
  Object {
    "body": Object {
      "name": "test",
    },
    "method": "POST",
    "uri": "http://localhost:4001/api/v3/projects",
  },
]
`;

exports[`#Client .createStoryLink create a story link 1`] = `
Array [
  Object {
    "body": Object {
      "object_id": 1234,
      "subject_id": 1,
      "verb": "blocks",
    },
    "method": "POST",
    "uri": "http://localhost:4001/api/v3/story-links",
  },
]
`;

exports[`#Client .deleteComment deletes a existing comment 1`] = `
Array [
  Object {
    "body": undefined,
    "method": "DELETE",
    "uri": "http://localhost:4001/api/v3/stories/5/comments/3",
  },
]
`;

exports[`#Client .deleteEpic deletes an existing epic 1`] = `
Array [
  Object {
    "body": undefined,
    "method": "DELETE",
    "uri": "http://localhost:4001/api/v3/epics/1234",
  },
]
`;

exports[`#Client .deleteProject deletes a existing project 1`] = `
Array [
  Object {
    "body": undefined,
    "method": "DELETE",
    "uri": "http://localhost:4001/api/v3/projects/1",
  },
]
`;

exports[`#Client .deleteReaction deletes a reaction in story 1`] = `
Array [
  Object {
    "body": Object {
      "emoji": ":happy",
    },
    "method": "DELETE",
    "uri": "http://localhost:4001/api/v3/stories/1/comments/5/reactions",
  },
]
`;

exports[`#Client .deleteStoryLink delete a story link 1`] = `
Array [
  Object {
    "body": undefined,
    "method": "DELETE",
    "uri": "http://localhost:4001/api/v3/story-links/1234",
  },
]
`;

exports[`#Client .getEpic requests a single epic 1`] = `
Array [
  Object {
    "body": undefined,
    "method": undefined,
    "uri": "http://localhost:4001/api/v3/epics/1234",
  },
]
`;

exports[`#Client .getProject requests a single project 1`] = `
Array [
  Object {
    "body": undefined,
    "method": undefined,
    "uri": "http://localhost:4001/api/v3/projects/1234",
  },
]
`;

exports[`#Client .getStoryLink get a story link 1`] = `
Array [
  Object {
    "body": undefined,
    "method": undefined,
    "uri": "http://localhost:4001/api/v3/story-links/1234",
  },
]
`;

exports[`#Client .listEpicStories list all stories in an epic with description 1`] = `
Array [
  Object {
    "body": Object {
      "includes_description": true,
    },
    "method": "GET",
    "uri": "http://localhost:4001/api/v3/epics/1234/stories",
  },
]
`;

exports[`#Client .listEpicStories list all stories in an epic without description 1`] = `
Array [
  Object {
    "body": Object {
      "includes_description": false,
    },
    "method": "GET",
    "uri": "http://localhost:4001/api/v3/epics/1234/stories",
  },
]
`;

exports[`#Client .listEpics list all epics with description 1`] = `
Array [
  Object {
    "body": Object {
      "includes_description": true,
    },
    "method": "GET",
    "uri": "http://localhost:4001/api/v3/epics",
  },
]
`;

exports[`#Client .listEpics list all epics without description 1`] = `
Array [
  Object {
    "body": Object {
      "includes_description": false,
    },
    "method": "GET",
    "uri": "http://localhost:4001/api/v3/epics",
  },
]
`;

exports[`#Client .listLabels list all labels 1`] = `
Array [
  Object {
    "body": undefined,
    "method": undefined,
    "uri": "http://localhost:4001/api/v3/labels",
  },
]
`;

exports[`#Client .listProjects returns a list of projects with a shortcut account 1`] = `
Array [
  Object {
    "body": undefined,
    "method": undefined,
    "uri": "http://localhost:4001/api/v3/projects",
  },
]
`;

exports[`#Client .updateComment update a existing comment 1`] = `
Array [
  Object {
    "body": Object {
      "text": "this is a test comment",
    },
    "method": "PUT",
    "uri": "http://localhost:4001/api/v3/stories/12/comments/5",
  },
]
`;

exports[`#Client .updateEpic updates an existing epic 1`] = `
Array [
  Object {
    "body": Object {
      "name": "test",
    },
    "method": "PUT",
    "uri": "http://localhost:4001/api/v3/epics/1234",
  },
]
`;

exports[`#Client .updateProject updates a existing project 1`] = `
Array [
  Object {
    "body": Object {
      "name": "test",
    },
    "method": "PUT",
    "uri": "http://localhost:4001/api/v3/projects/12",
  },
]
`;
